--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body style="font-family: verdana; color:white; background-color:#2e3649;">
 
     <center>
-        <h1><b>TIME IT TAKES FOR A HACKER<BR>TO CRACK YOUR PASSWORD</B>
+        <h1><b>TIME TAKEN FOR A HACKER<BR>TO CRACK YOUR PASSWORD</B>
             <BR>
             <center>
                 <HR style="width:40%;text-align:center">
